--- a/day05/Cargo.toml
+++ b/day05/Cargo.toml
@@ -8,3 +8,10 @@ input = { path = "../input" }
 itertools = "0.13.0"
 nom = "7.1.3"
 nom-supreme = "0.8.0"
+
+[dev-dependencies]
+divan = "0.1.4"
+
+[[bench]]
+name = "benchmarks"
+harness = false
