--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ resolver = "2"
 members = [ "day00", "day01", "day02", "day03", "day04", "day05",
     "input",
 ]
+
+[workspace.dependencies]
+divan = "0.1.4"
+itertools = "0.13.0"
+nom = "7.1.3"
+nom-supreme = "0.8.0"
