--- a/day05/Cargo.toml
+++ b/day05/Cargo.toml
@@ -8,6 +8,8 @@ input = { path = "../input" }
 itertools.workspace = true
 nom.workspace = true
 nom-supreme.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
 
 [dev-dependencies]
 divan.workspace = true
