--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [ "day00", "day01", "day02", "day03", "day04", "day05",
 
 [workspace.dependencies]
 divan = "0.1.4"
+glam = "0.29.2"
 itertools = "0.13.0"
 nom = "7.1.3"
 nom-supreme = "0.8.0"
