--- a/day08/Cargo.toml
+++ b/day08/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 input = { path = "../input" }
+glam.workspace = true
 itertools.workspace = true
 nom.workspace = true
 nom-supreme.workspace = true
