--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 resolver = "2"
 
 members = [ "day00", "day01", "day02", "day03", "day04", "day05",
-    "day06", "day07", "day08", "day09", "day10", "input",
+    "day06", "day07", "day08", "day09", "day10", "day11", "input",
 ]
 
 [workspace.dependencies]
