--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ glam = "0.29.2"
 itertools = "0.13.0"
 nom = "7.1.3"
 nom-supreme = "0.8.0"
+rayon = "1.10.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.18"
