--- a/day11/Cargo.toml
+++ b/day11/Cargo.toml
@@ -8,6 +8,7 @@ input = { path = "../input" }
 itertools.workspace = true
 nom.workspace = true
 nom-supreme.workspace = true
+rayon.workspace = true
 
 [dev-dependencies]
 divan.workspace = true
