--- a/day08/Cargo.toml
+++ b/day08/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+grid = { path = "../grid" }
 input = { path = "../input" }
 glam.workspace = true
 itertools.workspace = true
